tests/lex/invalid/bad_utf8_in_block_comment.zn
/* Here is the byte 0xFF ->ÿ<- which is invalid in UTF-8. */
